1.計算各股買賣日報表，買賣家前十五名-第二版本